Add content and some CSS

--- a/index.html
+++ b/index.html
@@ -1,23 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<html>
-
 <head>
-  <title>Weekend-Fun</title>
+  <title>Weekend Fun</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-    integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="sylesheet" href="index.css" />
+  integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
 <header>
   <h1>
-    Kris and Julie's Weekend-Fun
+    Kris and Julie's Weekend Fun
   </h1>
 </header>
-
+<div>
+  <ul class="weekend-grid">
+    <li>
+      Kris' Weekend
+      <hr>
+      <ul>
+        <li>Friday - hung out with the in-laws and watched movies together</li>
+        <li>Saturday - went to brother-in-laws baseball game</li>
+        <li>Sunday - had a game night and played Mario Kart with friends</li>
+      </ul>
+      <hr>
+    </li>
+    <li><img id="baseball"src="images/BASEBALL-DIAMOND-facebook.jpg" /></li>
+    <li>
+      Julie Weekend
+      <hr>
+      <ul>
+        <li>Friday - movie night with kids.</li>
+        <li>Saturday - Cleo tried to catch a chicken.</li>
+        <li>Sunday - Spring Cleaning!</li>
+      </ul>
+      <hr>
+    </li>
+    <li><img id="chicken"src="images/Cleo.jpg" /></li>
+  </ul>
+</div>
 
 
 </body>
